--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server/index.js",
-    "react-dev": "webpack watch"
+    "react-dev": "webpack watch",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,14 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.2",
+    "postcss-loader": "^6.2.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^2.2.19",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1"
   }
